gke-gateway-and-route.yaml
# GKE Gateway Configuration
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: py-api-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: gke-gateway-ssl-cert
---
# GKE HTTPRoute Configuration
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: py-api-route
  namespace: default
spec:
  hostnames:
  - jpgcp.shop
  - gateway.jpgcp.cloud
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: py-api-gateway
  rules:
  - backendRefs:
    - name: clusterip-chat-api-svc
      port: 8000
    matches:
    - path:
        type: PathPrefix
        value: /chat-api-svc
  - backendRefs:
    - group: ""
      kind: Service
      name: chat-ui-frontend-service
      port: 80
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /chat
  - backendRefs:
    - group: ""
      kind: Service
      name: chat-ui-iap-service
      port: 80
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /chat-iap
  - backendRefs:
    - group: ""
      kind: Service
      name: clusterip-py-api-svc
      port: 8000
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /pyapi
  - backendRefs:
    - group: ""
      kind: Service
      name: clusterip-py-webhook-svc
      port: 8000
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /webhook
